<resources>
    <string name="app_name">ToyOpenWeather</string>
    <string name="city_name">Name</string>
    <string name="city_country">Country</string>
    <string name="city_weather">Weather</string>
    <string name="city_humidity">Humidity</string>
    <string name="city_celsius">Celsius</string>

    <string name="button_search">Search</string>
    <string name="hint_input_city">Input City</string>

    <string name="error_get_current_weather">Not Get City Detail Info…</string>
    <string name="error_get_city_list">Not Get City Detail Info…</string>
    <string name="error_not_search_city_item">Not Search City…</string>
</resources>