<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.example.toyopenweather.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_back"
            android:onClick="@{() -> viewModel.routeContent()}"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".1"
            app:layout_constraintHorizontal_bias=".01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_name"
            app:layout_constraintEnd_toStartOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_name" />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_back"
            app:layout_constraintVertical_bias=".05"
            app:layout_constraintWidth_percent=".7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_country"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_country"
            app:layout_constraintEnd_toStartOf="@id/tv_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_country" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/tv_weather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintVertical_bias=".5"
            app:layout_constraintWidth_percent=".7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_weather"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_weather"
            app:layout_constraintEnd_toStartOf="@id/tv_weather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_weather" />

        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/tv_celsius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintVertical_bias=".5"
            app:layout_constraintWidth_percent=".7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_humidity"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_humidity"
            app:layout_constraintEnd_toStartOf="@id/tv_humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_humidity" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/tv_celsius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_weather"
            app:layout_constraintVertical_bias=".5"
            app:layout_constraintWidth_percent=".7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_celsius"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_celsius"
            app:layout_constraintEnd_toStartOf="@id/tv_celsius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_celsius" />

        <TextView
            android:id="@+id/tv_celsius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".95"
            app:layout_constraintWidth_percent=".7" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>